AWS/Project-101-kittens-carousel-static-website-ec2/cfn-template.yml
AWSTemplateFormatVersion: 2010-09-09
Description: |
  Project-101-kittens-carousel-static-website-ec2
  
Resources:
  myinstance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-0a8b4cd432b1c3063
      InstanceType: t2.micro
      KeyName: firstkey
      SecurityGroups:
        - !Ref mysecgroup
      Tags:
        - Key: Name
          Value: Cfn-template
      UserData: 
        Fn::Base64:
          !Sub |
            #! /bin/bash
            yum update -y
            yum install httpd -y
            systemctl start httpd
            systemctl enable httpd
            cd /var/www/html
            wget https://raw.githubusercontent.com/Ilkeradak/my-projects/main/AWS/Project-101-kittens-carousel-static-website-ec2/static-web/index.html
            wget https://raw.githubusercontent.com/Ilkeradak/my-projects/main/AWS/Project-101-kittens-carousel-static-website-ec2/static-web/cat0.jpg
            wget https://raw.githubusercontent.com/Ilkeradak/my-projects/main/AWS/Project-101-kittens-carousel-static-website-ec2/static-web/cat1.jpg
            wget https://raw.githubusercontent.com/Ilkeradak/my-projects/main/AWS/Project-101-kittens-carousel-static-website-ec2/static-web/cat2.jpg
            wget https://raw.githubusercontent.com/Ilkeradak/my-projects/main/AWS/Project-101-kittens-carousel-static-website-ec2/static-web/cat3.png
  
  mysecgroup: 
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enables ssh , http and https # Required
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
